hphp/hack/test/typecheck/modules/internal_outside_module.php.exp
File "internal_outside_module.php", line 3, characters 1-36:
You cannot make this symbol `internal` outside a module (NastCheck[3098])
File "internal_outside_module.php", line 6, characters 1-74:
You cannot make this symbol `internal` outside a module (NastCheck[3098])
File "internal_outside_module.php", line 8, characters 3-47:
You cannot make this symbol `internal` outside a module (NastCheck[3098])
File "internal_outside_module.php", line 12, characters 1-33:
You cannot make this symbol `internal` outside a module (NastCheck[3098])
