hphp/hack/test/typecheck/modules/internal_outside_module.php
<?hh

<<__Internal>>
function f(): void {}

<<__Internal>>
class A {
  <<__Internal>>
  public function g(): void {}
}

<<__Internal>>
type Foobar = int;
